--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="wrapper">
         <div class="screen">
             <div class="innerScreen">
-                <p id="display">0</p>
                 <p id="displayTempResult">0</p>
                 <p id="displayResult">0</p>
+                <p id="display">0</p>
             </div>
         </div>
         <div class="button">
@@ -24,19 +24,19 @@
                 <button class="operator" id="-">-</button>
                 <button class="operator" id="*">*</button>
                 <button class="operator" id="/">/</button>
-                <button class="operator" id="(">(</button>
-                <button class="operator" id=")">)</button>
+                <button class="operator letter" id="(">(</button>
+                <button class="operator letter" id=")">)</button>
             </div>
             <div class="buttons">
                 <button class="number">7</button>
                 <button class="number">8</button>
                 <button class="number">9</button>
-                <button class="number">6</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
                 <button class="number">4</button>
                 <button class="number">5</button>
+                <button class="number">6</button>
                 <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
                 <button class="number " id="0">0</button>
                 <button class="equal half">=</button>
             </div>
